--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html lang="en">
 
-
+<head>
+  <link rel="stylesheet" href="style.css">  
 <meta charset="utf-8">
 <span style='font-size:50px;'>
 
