--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 
 </head>
-<h1><span style='font-size:50px;'>My Portfolio</h1>
-<span style='font-size:50px;'>&#128511;
-<span style='font-size:100px;'>&#128037;
+<h1><span style='font-size:20px;'>My Portfolio</h1>
+<span style='font-size:20px;'>&#128511;
+<span style='font-size20px;'>&#128037;
 
 <div class="container">
 
